--- a/shopping_site/css/index.css
+++ b/shopping_site/css/index.css
@@ -5,6 +5,7 @@
     padding: 0;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
+    
 }
 *::selection{
 
@@ -17,6 +18,7 @@ body{
     /* background: #e2e2e2; */
     width: 100%;
     overflow-x: hidden;
+
 }
 
 .main_container{
@@ -155,33 +157,43 @@ display: none;
         justify-content: space-around;
     }
 }
-
-
 .slideshow-container {
-    z-index: -1;
     max-width: 1000px;
     position: relative;
     margin: auto;
-  } 
+    z-index:-1;
+}
 
-  .mySlides {
+.mySlides {
     display: none;
-  }
-   
-  .text {
+    height: auto;
+ 
+     
+}
+
+  
+.text {
     color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
+    font-size: 20px;
+    padding-top: 12px;
+  padding-bottom: 12px;
     position: absolute;
-    bottom: 8px;
+    bottom: 0;
     width: 100%;
     text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
- 
-  /* The dots/bullets/indicators */
-  .dot {
+    background-color: #e08256;
+    text-transform: capitalize;
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+.dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -189,27 +201,13 @@ display: none;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
+    transition: background-color .6s ease;
+}
+
+.active,
+.dot:hover {
     background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4; }
-    to {opacity: 1}
-  }
-  
-  @keyframes fade {
-    from {opacity: .4; }
-    to {opacity: 1}
-  }
+}
+.this_is_dot{
+    margin-top: 30px;
+}
