--- a/Ecommerce/CSS/login_register.css
+++ b/Ecommerce/CSS/login_register.css
@@ -13,30 +13,31 @@ body{
  
 html,body{
   display: grid;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   place-items: center;
   background: #f2f2f2;
-  overflow: hidden;
   /* background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
 ::selection{
-  background: #4158d0;
-  color: #fff;
+  background: transparent;
+  color: #f00;
 }
 .wrapper{
-  width: 380px;
+  width: 450px;
   background: #fff;
   border-radius: 15px;
   box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+	display:flex;
 }
 .wrapper .title{
-  font-size: 35px;
+  font-size: 2rem;
   font-weight: 600;
   text-align: center;
   line-height: 100px;
   color: #fff;
   user-select: none;
+	padding:0px 20px;
   border-radius: 15px 15px 0 0;
   background: linear-gradient(-135deg, #c850c0, #4158d0);
 }
@@ -111,7 +112,7 @@ form .field input[type="submit"]{
   cursor: pointer;
   background: linear-gradient(-135deg, #c850c0, #4158d0);
   transition: all 0.3s ease;
-  margin: 0 0px;
+  margin: 0px 0px;
 
 }
 form .field input[type="submit"]:active{
@@ -133,4 +134,164 @@ form .signup-link a:hover{
 }
 input{
   border: 0;
+}
+
+
+
+/*code added by aashish */
+.wrapper .form__image img{
+	width:300px;
+}
+
+.form{
+	margin-top:20px;
+	text-align:center;
+}
+
+.wrapper{
+	width:900px;
+	align-items: center;
+	justify-content: space-evenly;
+	flex:1;
+	padding:20px;
+}
+
+/* .wrapper .form{
+	width: 50%;
+} */
+
+/* 
+.abcRioButton .abcRioButtonLightBlue{
+	width:100%;
+	text-align:center;
+}
+*/
+
+.abcRioButtonContentWrapper{
+  color: #fff;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+  background: linear-gradient(-135deg, #4169c0, #a650d0);
+  transition: all 0.3s ease;
+  margin: 0px 0px;
+	height: 100%;
+  width: 100%;
+  outline: none;
+	appearance: push-button;
+	user-select: none;
+	text-align: center;
+	letter-spacing: normal;
+	word-spacing: normal;
+	text-transform: none;
+	text-indent: 0px;
+	text-shadow: none;
+	text-rendering: auto;
+	border-radius:25px;
+	display: flex;
+	align-items:center;
+	justify-content:center;
+	font-size:2rem;
+} 
+
+.abcRioButton,.abcRioButtonLightBlue{
+	-webkit-border-radius: 25px !important;
+	border-radius:25px !important;
+	-webkit-box-shadow:none;
+	box-shadow:none;
+	box-sizing: border-box;
+	text-align:center;
+}
+
+/* .abcRioButtonSvgImageWithFallback,.abcRioButtonIconImage,.abcRioButtonIconImage18{
+	width:30px;
+	height:30px;
+} */
+
+.abcRioButtonContents{
+	font-size:25px;
+}
+
+.or{
+    position:relative;
+    font-size:1.5rem;
+    font-family:sans-serif;
+    font-weight:bolder;
+		margin:20px 10px;
+}
+
+.or:before{
+    content:'';
+    position: absolute;
+    top:50%;
+    transform:translate(-110%,-50%);
+    height: 3px;
+    background:#fafa;
+    width: 100px;
+}
+
+.or:after{
+    content:'';
+    position: absolute;
+    top:50%;
+    transform:translate(10%,-50%);
+    height: 3px;
+    background:#fafa;
+    width: 100px;
+}
+
+
+
+/* Halka responsive */
+@media screen and (max-width:960px){
+	.wrapper{
+		width:700px;
+	}
+
+	html{
+		font-size:80%;
+	}
+
+	.wrapper .form__image img{
+		width:200px;
+	}
+}
+
+
+@media screen and (max-width:790px){
+	.wrapper{
+		width:90%;
+		justify-content:center;
+	}
+
+	html{
+		font-size:70%;
+	}
+
+	.wrapper .form__image img{
+		display:none;
+	}
+}
+
+@media screen and (min-width:790px){
+	form .field input[type="submit"],
+	.abcRioButtonContentWrapper,
+	.wrapper .title{
+		background: #e08256;
+	}
+
+	form .field input[type="submit"]:hover{
+		background-position: right center;
+	}
+}
+
+
+@media screen and (max-width:650px){
+	.wrapper{
+		width:auto;
+	}
+
+	.wrapper form{
+		padding: 10px 10px 50px 10px;
+	}
 }
