--- a/Ecommerce/CSS/login_register.css
+++ b/Ecommerce/CSS/login_register.css
@@ -15,8 +15,8 @@ html,body{
   display: grid;
   min-height: 100vh;
   width: 100%;
-  place-items: center;
-  background: #f2f2f2;
+  place-items:center;
+	/* justify-content:center; */
   /* background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
 ::selection{
@@ -27,7 +27,7 @@ html,body{
   width: 450px;
   background: #fff;
   border-radius: 15px;
-  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+  /* box-shadow: 0px 15px 20px rgba(0,0,0,0.1); */
 	display:flex;
 }
 .wrapper .title{
@@ -140,11 +140,11 @@ input{
 
 /*code added by aashish */
 .wrapper .form__image img{
-	width:300px;
+	width:400px;
 }
 
 .form{
-	margin-top:20px;
+	/* margin-top:0px; */
 	text-align:center;
 }
 
@@ -273,7 +273,7 @@ input{
 	}
 }
 
-@media screen and (min-width:790px){
+@media screen and (min-width:90px){
 	form .field input[type="submit"],
 	.abcRioButtonContentWrapper,
 	.wrapper .title{
