--- a/shopping_site/css/index.css
+++ b/shopping_site/css/index.css
@@ -118,7 +118,6 @@ display: none;
 }
 .rightnav{
     position: fixed;
-    
     right: 5%;
     display: flex;
     justify-content: center;
@@ -172,10 +171,16 @@ display: none;
         justify-content: space-around;
     }
 }
+.sectio_one_image_slider{
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .slideshow-container {
     max-width: 1000px;
     position: relative;
-    margin: auto;
     z-index:-1;
 }
 
@@ -191,7 +196,7 @@ display: none;
     color: #f2f2f2;
     font-size: 20px;
     padding-top: 12px;
-  padding-bottom: 12px;
+    padding-bottom: 12px;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -199,14 +204,7 @@ display: none;
     background-color: #e08256;
     text-transform: capitalize;
 }
-
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
+ 
 
 .dot {
     cursor: pointer;
@@ -242,24 +240,27 @@ display: none;
 /* products section. */
 /* del laptop style */
  .laptopContainer{
-     background: #e2e2e2;
+     /* background: #e2e2e2; */
      border-radius: 20px;
      padding: 20px;
      display: grid;
-     grid-template-columns: repeat(auto-fit,minmax(100px,300px));
-     grid-template-rows: 20px minmax(100px,400px);
-     grid-auto-rows:minmax(100px,400px);
-     grid-row-gap: 50px;
-     grid-column-gap: 20px;
+     grid-auto-rows: 500px;
+     -ms-grid-columns: (minmax(200px, 300px))[auto-fit];
+     grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+    grid-gap: 20px;
+     overflow: hidden;
+     margin-top: 20px;
+    place-items: center;
+ 
     }
-    .laptopContainer > .title{
-     margin: 0 auto;
+ .title{
      font-size: x-large;
      color: #333;
-     grid-row: 1/2;
-     grid-column: 1/-1;
+     text-align: center;
  }
  .laptopContainer .container{
+     min-width: 300px;
+     max-width: 300px;
     border-radius: 5px;
     box-shadow: 0px 0px 20px #3837374f;
      display: grid;
@@ -267,7 +268,8 @@ display: none;
      grid-template-rows: 0.8fr 0.7fr;
      background: rgb(255, 255, 255);
      transition:0.5s all;
- }
+     min-height: 400px;
+ } 
  .laptopContainer .container:hover{
      cursor: pointer;
      box-shadow: 0px 0px 20px #383737a2;
@@ -278,6 +280,9 @@ display: none;
      background-size: 150%;
      background-position: 75%;
     border-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+
     }
 
  .btm{ 
@@ -324,7 +329,9 @@ small{
     padding: 10px 20px;
     border-radius: 2px;
     cursor: pointer;
-    
+    text-align: center;
 }
- 
+ .lpt1{
+     margin-top: 100px;
+ }
 /* del aptop end */
