--- a/shopping_site/product/searchFilter.css
+++ b/shopping_site/product/searchFilter.css
@@ -7,6 +7,9 @@
 	border-radius:5px;
 	display: 	none;
 	position: absolute;
+	left: 50%;
+	transform: translate(-50% , 5%);
+	box-shadow: 0px 0px 20px rgba(51, 51, 51, 0.171);
 }
 
 .search__container input{
@@ -15,8 +18,8 @@
 	height:auto;
 	border-radius:5px;
 	padding:10px 10px;
-	font-size:1.2rem;
-	border:.5px solid #1100bb55;
+	font-size:1rem;
+	border:.5px solid #1000bb28;
 }
 
 .search__options{
@@ -24,6 +27,7 @@
 	max-height:275px;
 	overflow-y: scroll;
 	width:100%;
+	border-radius:5px;
 }
 
 .search__options .search__optionsBox,.search__optionsBoxCity,.search__optionsBoxNearby{
@@ -41,7 +45,7 @@
 .search__options .search__optionsBox:hover,
 .search__optionsBoxCity:hover,
 .search__optionsBoxNearby:hover{
-	background:#fafa;
+	background:#e8e8e8;
 	cursor:pointer;
 }
 
@@ -54,3 +58,28 @@
 	width:90%;
 	padding:0px 20px;
 }
+.btn_con_add_change{
+	width: 90%;
+	background: #e8e8e8;
+	padding:10px 5%;
+	color: #333;
+	cursor: pointer;
+
+}
+.btn_con_add_change > .button_addres_changer_adder{
+	background: Transparent;
+	border: none;
+	outline: none;
+	color: #27bcd6;
+	font-size: 1em;
+	padding: 10px 20px;
+	transition: 0.4s background;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.btn_con_add_change > .button_addres_changer_adder:hover{
+	color: #ffffff;
+	background: #27bcd6;
+}
+ 
