--- a/shopping_site/product/product1.css
+++ b/shopping_site/product/product1.css
@@ -378,13 +378,9 @@ text-transform: capitalize;
     box-shadow: 0px 0px 20px #383737a2;
 
 }
-  .container .img{
-    background: url("../img/laptop.png");
-    background-size: 150%;
-    background-position: 75%;
-   border-radius: 5px;
-   border-bottom-left-radius: 0px;
-   border-bottom-right-radius: 0px;
+ .theImg_from_db_style{
+    max-width:300px;
+    min-width: 200px;
 
    }
 
