--- a/css/product.css
+++ b/css/product.css
@@ -63,14 +63,12 @@ input[type=number] {
 
 
 .product_page_product_container{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3,1fr);
+    display: block;
     box-shadow: 0px 0px 20px rgba(51, 51, 51, 0.253);
     width: 90%;
     margin: 0 auto;
-    padding: 0px 5%;
-    padding-bottom: 30px;
+    padding:  5%;
+    padding-bottom: 50px;
     border-radius: 5px;
 
 }
@@ -97,13 +95,13 @@ align-items: center;
 } 
 .product_title    p{
     margin-left: 5px;
-margin-top: 5px;
-text-transform: capitalize;
-color: #333;
-font-size: 19px;
-height: 50px;
-display: flex;
-align-items: center;
+    margin-top: 5px;
+    text-transform: capitalize;
+    color: #333;
+    font-size: 19px;
+    height: 50px;
+    display: flex;
+    align-items: center;
 }
 .hr{
      border-bottom: 1px solid rgba(51, 51, 51, 0.158);
@@ -205,6 +203,7 @@ align-items: center;
     .product_page_main_container{
         grid-template-columns: 1fr;
         grid-template-rows: minmax(200px,500px) minmax(500px,1fr) 1fr;
+        
     }
     .product_page_product_container{
         margin-top: 50px;
@@ -220,13 +219,14 @@ align-items: center;
     /* background: ; */
 }
 }
-@media only screen and (max-width:650px){
-
+@media only screen and (max-width:600px){
+ 
     .product_page_main_container{
         width: 100%;
-        margin:  0 auto;
+        margin:  0px auto;
         display: flex;
         flex-direction: column;
+
     }
 .btn_section{
    display: flex;
@@ -242,7 +242,19 @@ align-items: center;
     margin: 0 auto;
 
 }
+.product_page_features_section img{
+    display: none;
+}
+.product_page_features_section{
+    width: 100% !important;
+    display: block;
+}
 
+.container{
+    padding: 0 !important;
+    max-width: 290px !important;
+}
+ 
 }
 
 .flg>img , .freeShiping > img , .cash_on_deli > img , .ship_under_1week > img {
@@ -338,43 +350,9 @@ width: 20px;
 .img_container > img{
     width: 100%;
 }
-.suggested__products__container{
-    margin-top: 0px;
-    width: 75%;
-    margin: 50px auto;
-    background: #ffff;
-    box-shadow: 0px 0px 20px rgba(51, 51, 51, 0.253);
-    padding:  5%;
-    
+ 
+ 
 
-}
-.suggested__products__container > .title_suggested{
-font-size: 2em;
-font-weight:900;
-color: #333333;
-text-transform: capitalize;
-
-}
-.products_suggested_pro{
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,300px));
-    grid-auto-rows: 1fr;
-    grid-gap: 30px;
-}
-.container{
-    min-width: 300px;
-    max-width: 300px;
-   border-radius: 5px;
-   box-shadow: 0px 0px 20px #3837374f;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.8fr 0.7fr;
-    background: rgb(255, 255, 255);
-    transition:0.5s all;
-    min-height: 400px;
-
-} 
   .container:hover{
     cursor: pointer;
     box-shadow: 0px 0px 20px #383737a2;
@@ -431,9 +409,9 @@ small{
    cursor: pointer;
    text-align: center;
 } 
+ 
 
-
-.laptopContainer{
-    z-index: -1;
+.title_suggested{
+    margin-left: 5px;
 }
-/* del aptop end */
+ 
