--- a/css/index.css
+++ b/css/index.css
@@ -288,7 +288,7 @@ display: none;
      min-width: 300px;
      max-width: 300px;
     border-radius: 5px;
-    box-shadow: 0px 0px 20px #3837374f;
+    /* box-shadow: 0px 0px 20px #3837374f; */
      display: block;
      background: rgb(255, 255, 255);
      transition:0.5s all;
@@ -298,6 +298,7 @@ display: none;
  } 
  .laptopContainer .container:hover{
      box-shadow: 0px 0px 20px #383737a2;
+     transform: translatey(-10px);
  }
  .laptopContainer .container> img{
      max-width:300px;
@@ -365,4 +366,29 @@ small{
     text-transform: capitalize;
 }
 
- 
+ .lpt1{
+     /* box-shadow:0px 0px 20px rgba(49, 49, 49, 0.198); */
+     position: relative;
+     padding:40px;
+     /* place-items: center; */
+     /* background: #333;
+     border-top: 1px solid rgba(51, 51, 51, 0.274);
+     border-bottom: 1px solid rgba(51, 51, 51, 0.274); */
+
+ }
+.a{
+     position: absolute;
+     bottom: 20px;
+     left: 50%;
+     transform: translate( -50% , 0%);
+
+}
+.a > button{
+    background: #333;
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
