--- a/css/product.css
+++ b/css/product.css
@@ -168,6 +168,19 @@ align-items: center;
     background: #21afda;
 
 }
+.buyNow1{
+    background: #2abbe8;
+    padding: 10px 20px;
+    max-width: 200px;
+    /* min-height: 50px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    text-transform: capitalize;
+}
 .btn_section > .AddToCart,
 .btn_section > .buyNow{
     height: 100%;
@@ -414,4 +427,63 @@ small{
 .title_suggested{
     margin-left: 5px;
 }
+#this{
+    position: fixed;
+    min-height: 100vh;
+    min-width: 100vw;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.26);
+    display: none;
+    z-index: 100;
+  
+}
+
+.box_alert{
+    z-index: 101;
+    width: 70%;
+    min-height: 50%;
+    padding: 20px;
+    /* border-left-width: 50%; */
+    background: #fff;
+    border-radius: 20px;
+    /* transform: scale(0.5); */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: none;
+}  
+#number_container_alert_box{
+    border: none;
+    outline: none;
+}
+
+.info_tab_box{
+    padding: 20px;
+}
  
+
+ .info_tab_box span{
+    font-size: 1.2em;
+    text-transform: capitalize;
+    margin-top: 20px;
+}
+span > .qty{
+    margin-top: 0px;
+    color: #333;
+}
+.buyNow1{
+    margin-top: 20px;
+}
+.box_alert > h3{
+    color: rgba(51, 51, 51, 0.664);
+    font-size:1.9em;
+    text-transform: uppercase;
+}
+
+#number_container_alert_box{
+    border-radius: 4px;
+    padding: 5px 10px;
+    font-size: 1.1em;
+}
