--- a/css/index.css
+++ b/css/index.css
@@ -183,69 +183,9 @@ display: none;
         flex-direction: column;
         justify-content: center;
         }
-        .laptopContainer{
-            width: 100%;
-            padding: 0px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
+       
 
 }
-.sectio_one_image_slider{
-    max-width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.slideshow-container {
-    max-width: 1000px;
-    position: relative;
-   
-}
-
-.mySlides {
-    display: none;
-    height: auto;
- 
-     
-}
-
-  
-.text {
-    color: #f2f2f2;
-    font-size: 20px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    background-color: #e08256;
-    text-transform: capitalize;
-}
- 
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color .6s ease;
-}
-
-.active,
-.dot:hover {
-    background-color: #717171;
-}
-.this_is_dot{
-    margin-top: 30px;
-}
-
 
 /* products section. */
 
@@ -260,102 +200,12 @@ display: none;
 
 /* products section. */
 /* del laptop style */
- .laptopContainer{
-     /* background: #e2e2e2; */
-     border-radius: 20px;
-     padding: 20px;
-     display: grid;
-     grid-auto-rows: 1fr;
-     -ms-grid-columns: (minmax(200px, 300px))[auto-fit];
-     grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
-    grid-gap: 20px;
-    overflow: hidden;
-    margin-top: 20px;
-    width: 90%;
-    grid-gap:40px ;
-    /* grid-row-gap:20px ; */
-    /* place-items: center ; */
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    }
- .title{
-     font-size: x-large;
-     color: #333;
-     text-align: center;
- }
- .container{
-     min-width: 300px;
-     max-width: 300px;
-    border-radius: 5px;
-    /* box-shadow: 0px 0px 20px #3837374f; */
-     display: block;
-     background: rgb(255, 255, 255);
-     transition:0.5s all;
-     padding: 10px;
-     z-index: 10;
-     margin: 0 auto;
- } 
- .laptopContainer .container:hover{
-     box-shadow: 0px 0px 20px #383737a2;
-     transform: translatey(-10px);
- }
- .laptopContainer .container> img{
-     max-width:300px;
-     min-width: 200px;
 
-    }
 
- .btm{ 
-     padding: 10px 20px;
-     text-transform: capitalize;
-     display: flex;
-    flex-direction: column;
-    }
 
- .btm > .heading
-{
-    cursor: pointer;
-    color: #333;
-    font-weight: bolder;
-    font-size: 20px;
-}
- 
-.btm > .heading:hover{
-    color: rgb(22, 22, 22);
-
-}
-small{
-    font-size: 1.1em;
-    color: rgb(0, 81, 255);
-}
-.high_price{
-    font-size: 1.1em;
-    color: rgb(255, 125, 125);
-    position: relative;
-}
-.high_price::after{
-    content:'';
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%) rotate(-7deg);
-    height: 1px;
-    width: 40%;
-    background:rgb(255, 125, 125) ;
-    padding-right: 30px;
-}
-
-.btm .btn_add_cart{
-    background: #e08256;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 2px;
-    cursor: pointer;
-    text-align: center;
-}
  .lpt1{
      margin-top: 100px;
+     max-height: 100vh;
  }
 /* del aptop end */
 
@@ -365,30 +215,4 @@ small{
     margin-left: 20px;
     text-transform: capitalize;
 }
-
- .lpt1{
-     /* box-shadow:0px 0px 20px rgba(49, 49, 49, 0.198); */
-     position: relative;
-     padding:40px;
-     /* place-items: center; */
-     /* background: #333;
-     border-top: 1px solid rgba(51, 51, 51, 0.274);
-     border-bottom: 1px solid rgba(51, 51, 51, 0.274); */
-
- }
-.a{
-     position: absolute;
-     bottom: 20px;
-     left: 50%;
-     transform: translate( -50% , 0%);
-
-}
-.a > button{
-    background: #333;
-    color: #fff;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
+ 
