--- a/css/product.css
+++ b/css/product.css
@@ -466,7 +466,7 @@ small{
 
  .info_tab_box span{
     font-size: 1.2em;
-    text-transform: capitalize;
+     
     margin-top: 20px;
 }
 span > .qty{
@@ -486,4 +486,7 @@ span > .qty{
     border-radius: 4px;
     padding: 5px 10px;
     font-size: 1.1em;
+}
+#user_gmail{
+    text-transform: initial;
 }
