--- a/css/product.css
+++ b/css/product.css
@@ -262,11 +262,6 @@ align-items: center;
     width: 100% !important;
     display: block;
 }
-
-.container{
-    padding: 0 !important;
-    max-width: 290px !important;
-}
  
 }
 
@@ -364,68 +359,26 @@ width: 20px;
     width: 100%;
 }
  
- 
-
-  .container:hover{
-    cursor: pointer;
-    box-shadow: 0px 0px 20px #383737a2;
-
-}
+    
  .theImg_from_db_style{
     max-width:300px;
     min-width: 200px;
 
    }
-
-.btm{ 
-    padding: 10px 20px;
-    text-transform: capitalize;
-    display: flex;
-   flex-direction: column;
-   }
-
-.btm > .heading
-{
-
-   color: #333;
-   font-weight: bolder;
-   font-size: 1.6em;
-}
-
-small{
-   font-size: 1.1em;
-   color: rgb(0, 81, 255);
-}
-.high_price{
-   font-size: 1.1em;
-   color: rgb(255, 125, 125);
-   position: relative;
-}
-.high_price::after{
-   content:'';
-   position: absolute;
-   top:50%;
-   left: 50%;
-   transform: translate(-50%,-50%) rotate(-7deg);
-   height: 1px;
-   width: 40%;
-   background:rgb(255, 125, 125) ;
-   padding-right: 30px;
-}
-
-.btm .btn_add_cart{
-    text-decoration: none;
-   background: #e08256;
-   color: #fff;
-   padding: 10px 20px;
-   border-radius: 2px;
-   cursor: pointer;
-   text-align: center;
-} 
+ 
  
 
 .title_suggested{
     margin-left: 5px;
+}
+.title{
+     
+        margin-top: 80px;
+        text-transform: capitalize;
+        font-size: 2.5em;
+        font-weight: bolder;
+        color: rgba(51, 51, 51, 0.733);
+        margin-left: 50px;
 }
 #this{
     position: fixed;
