--- a/css/swipe.css
+++ b/css/swipe.css
@@ -8,9 +8,14 @@ body {
   }
 
   .swiper-container {
-    width: 100%;
+    /* width: 100%; */
     padding-bottom: 50px;
-    max-height: 100vh;
+    /* max-height: 100vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    padding-top: 100px;
   }
 
   .swiper-slide {
@@ -21,10 +26,13 @@ body {
     /* border: 1px solid #333; */
     border-radius: 5px;
     background:rgba(63, 63, 63, 0.986);
+
  
                         /* 0px 0px 20px #000; */
     color: #e8e8e8;
     padding: 10px;
+    box-shadow: 0px 0px 20px  #000;
+
 
   }
   .swiper-slide > img{
@@ -41,6 +49,7 @@ body {
       transform: scale(1.2);
        background: #333;        
        opacity: 1;
+       box-shadow: 0px 0px 40px  #000;
   }
  
   .a{
@@ -103,9 +112,31 @@ small svg{
     margin-top: 10px;
 }
 .title{
-  color: rgba(51, 51, 51, 0.835);
+  color: #e8e8e8;
   font-size: 3em;
   margin-top: -40px;
   padding-bottom:10px;
   font-weight: bolder;
+  margin-left: 30px;
 }
+body{
+  background: #333333;
+}
+
+@media only screen and (max-width:550px){
+  .swiper-slide-active{
+    transform: scale(0.9);
+  }
+ 
+}
+
+.lpt1{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.541);
+  padding-bottom: 75px;
+}
+.nav{
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.637);
+}
+
+
+
