--- a/css/index.css
+++ b/css/index.css
@@ -111,7 +111,7 @@ body{
     text-transform: capitalize;
     width: 100%;
 }
-.side_slide_nav > ul > a:nth-of-type(1)  , .side_slide_nav > ul > a:nth-of-type(2) {
+.side_slide_nav > ul > a:nth-of-type(1) ,.side_slide_nav > ul > a:nth-of-type(4) ,.side_slide_nav > ul > a:nth-of-type(3) , .side_slide_nav > ul > a:nth-of-type(2) {
 margin-left: 50px;
 color: #cecece;
 display: none;
