--- a/css/swipe.css
+++ b/css/swipe.css
@@ -31,7 +31,7 @@ body {
                         /* 0px 0px 20px #000; */
     color: #e8e8e8;
     padding: 10px;
-    box-shadow: 0px 0px 20px  #000;
+ 
 
 
   }
@@ -49,7 +49,7 @@ body {
       transform: scale(1.2);
        background: #333;        
        opacity: 1;
-       box-shadow: 0px 0px 40px  #000;
+ 
   }
  
   .a{
@@ -112,16 +112,14 @@ small svg{
     margin-top: 10px;
 }
 .title{
-  color: #e8e8e8;
+  color: rgba(51, 51, 51, 0.753);
   font-size: 3em;
   margin-top: -40px;
   padding-bottom:10px;
   font-weight: bolder;
   margin-left: 30px;
 }
-body{
-  background: #333333;
-}
+ 
 
 @media only screen and (max-width:550px){
   .swiper-slide-active{
@@ -134,9 +132,6 @@ body{
   border-bottom: 1px solid rgba(255, 255, 255, 0.541);
   padding-bottom: 75px;
 }
-.nav{
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.637);
-}
-
+ 
 
 
