--- a/css/index.css
+++ b/css/index.css
@@ -214,3 +214,70 @@ display: none;
     text-transform: capitalize;
 }
  
+.con_for_the_lap{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: minmax(150px , 1fr) minmax(150px,450px);
+    grid-gap: 20px; 
+}
+
+
+.con_for_the_lap h3{
+    max-width: 700px;
+    color: #333;
+}
+.con_for_the_lap h1{
+    color: rgba(53, 53, 53, 0.815);
+    font-size: 3em;
+    
+}
+ 
+.swiper-wrapper1 .swiper-slide1 > img{
+    width: 100%;
+}
+
+.swiper1 .swiper-slide{
+    width: 100%; 
+    
+}
+.swiper1 { 
+    min-width: 150px;
+    max-width: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 300px;
+    background: transparent;
+  }
+
+  .swiper1 .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    background: transparent;
+    padding: 0px;
+    box-shadow: 0px 0px 0px rgba(61, 61, 61, 0.28);
+    margin: 0;
+  }
+
+  .mainHeading p span{
+    color: #e46a23;
+    font-size: 25px;
+}
+.mainHeading p {
+    font-size: 1.3em;
+    text-transform: capitalize;
+    color: rgb(29, 29, 29);
+    margin-left: 30px;
+
+}
+ 
+.mainHeading h3{
+    color: rgba(53, 52, 52, 0.835);
+    font-size: 1.5em;
+    text-transform: capitalize;
+    margin-top: 30px;
+    margin-left: 30px;
+
+}
