--- a/css/swipe.css
+++ b/css/swipe.css
@@ -1,5 +1,5 @@
 body {
-    background: #fff;
+    background: #f1f3f6;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #000;
@@ -14,50 +14,40 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    padding-top: 100px;
+    width: 100vw; 
   }
 
   .swiper-slide {
+    margin-left: 10px;
+    margin-top: 10px;
     background-position: center;
     background-size: cover;
     width: 300px;
-    height: 455px;
-    /* border: 1px solid #333; */
-    border-radius: 5px;
-    background:rgba(63, 63, 63, 0.986);
-
- 
+    height: auto;
+    border-radius: 5px;       background:#ffffff;        
                         /* 0px 0px 20px #000; */
-    color: #e8e8e8;
+    color: #333;
     padding: 10px;
- 
-
-
+    box-shadow: 0px 0px 2px rgba(61, 61, 61, 0.28);
   }
   .swiper-slide > img{
       width: 100%;
     border-radius: 5px;
-
-
   }
 
   .swiper-slide h2{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    -webkit-box-orient: vertical;
     font-weight: bolder;
-  }
-  .swiper-slide-active{
-      transform: scale(1.2);
-       background: #333;        
-       opacity: 1;
+    font-size: 1.2em;
+  } 
  
-  }
- 
-  .a{
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate( -50% , -30%);
-
+  .a{ 
+    margin: 0 auto;
+    display: block;
 }
 .a > button{
   background: rgb(255, 125, 125);
@@ -67,18 +57,21 @@ body {
   cursor: pointer;
   padding: 10px 20px;
   border-radius: 5px;
+  margin: 0 auto;
+  display: block;
+  margin-top: 20px;
 }
 .btn_add_cart{
   /* margin-top: 50px; */
   text-decoration: none;
-  color: #333;
+  color: rgb(255, 255, 255);
   font-size: 1.1em;
   font-weight: bold;
-  padding: 15px 20px;
+  padding: 15px 15px;
   line-height: 10px;
   text-align: center;
   border-radius: 10px;
-  background: rgb(0, 255, 149);
+  background:#f57224;
   margin: 0 auto;
   display: block;
   max-width: 150px;
@@ -86,52 +79,38 @@ body {
 .high_price{
   font-size: 1.1em;
   /* color: rgb(255, 58, 58); */
-  color: rgba(0, 255, 149, 0.28);
+  color: rgba(51, 51, 51, 0.37);
   position: relative;
 }
-/* .high_price::after{
-  content:'';
-  position: absolute;
-  top:50%;
-  left: -10%;
-  transform: translate(0%,-50%) rotate(-7deg);
-  height: 1px;
-  width: 70%;
-  background:rgba(248, 248, 248, 0.815) ;
-  padding-right: 30px;
-} */
 .orginal_price{
   font-size: 1.1em;
-  color: rgb(0, 255, 149);
+  color:rgb(17, 17, 17);
 }
 small svg{
-  fill:rgb(0, 255, 149) ;
-  
+  fill:rgb(221, 146, 6);
 }
 .btm{
     margin-top: 10px;
 }
 .title{
   color: rgba(51, 51, 51, 0.753);
-  font-size: 3em;
-  margin-top: -40px;
+  font-size: 3em; 
   padding-bottom:10px;
   font-weight: bolder;
   margin-left: 30px;
 }
  
-
-@media only screen and (max-width:550px){
-  .swiper-slide-active{
-    transform: scale(0.9);
-  }
  
-}
 
 .lpt1{
-  border-bottom: 1px solid rgba(255, 255, 255, 0.541);
-  padding-bottom: 75px;
+  /* border-bottom: 1px solid rgba(56, 56, 56, 0.541); */
+  background:#ffffff;
+  padding-top: 10px;
+  width: 97%;
+  margin: 0 auto;
+  /* box-shadow: 0px 0px 20px rgba(51, 51, 51, 0.26) ; */
+  margin-top: 30px;
+  overflow: hidden;
+
 }
  
-
-
