--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,9 @@ footer{
     /* min-height: 200px; */
     place-items: center;
     z-index: 10;
-}
+    padding: 100px 0px ;
+    margin-top:10px;
+ }
 body{
     /* background: #e2e2e2; */
     width: 100%;
@@ -32,11 +34,10 @@ body{
 
 }
 
-.main_container{
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: minmax(50px,70px) 1fr minmax(200px,300px);
+.main_container{ 
+    display:flex;
+    flex-direction:column;
+    width: 100%;  
 }
 .nav{
     /* background: #f1f1f1; */
